# Project-Management-Agent

./: .gitignore  DATABASE_SCHEMA.md  E2E_TESTING_GUIDE.md  FRONTEND_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  NEXUS_PM_Agent_PRD_v5.docx  PORTAL_FLOWS.md  openapi.json  prd_extracted.txt  pyproject.toml
api/: admin_routes.py  auth_routes.py  bootstrap.py  config_routes.py  deps.py  errors.py  main.py  me_routes.py  project_routes.py  register_routes.py  review_routes.py  security.py  sonnet_dep.py  team_routes.py
config/: config_schema.json  defaults.example.json
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: middleware.ts
prompts/: comms_draft.md  meeting_extract.md  retrospective.md  risk_duplicate_check.md  risk_pattern_scan.md  slip_explanation.md  status_parse.md  task_breakdown_phases.md  task_breakdown_tasks.md
schema/: schema.sql
schema/migrations/: 002_auth.sql  003_review_dedup.sql
src/: config_loader.py  db.py
src/governance/: escalation.py  forms.py  review_queue.py  tiers.py
src/lib/: audit.py  (+4 more)
tests/: conftest.py  eval_meeting_summary.py  eval_task_breakdown.py  fakes.py  test_allocation.py  test_api_auth.py  test_api_core.py  test_assignment_engine.py  test_blockers_and_score_adjust.py  test_config_loader.py  test_cross_project_capacity.py  test_db.py  test_dependency_manager.py  test_governance.py  test_import_guardrail.py  test_meeting_summary.py  test_orchestrator.py  test_risk_tracking.py  test_scheduler.py  test_stakeholder_comms.py  test_status_tracking.py  test_task_breakdown.py
(+67 files in other folders)
