[project]
name = "nexus-pm-agent"
version = "0.1.0"
description = "NEXUS PM Agent - single-client multi-project PM automation (PRD v5)"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# eval_* scripts call Sonnet 5 for real and are run explicitly, not by default
addopts = "--ignore-glob=tests/eval_*"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
